[package]
name = "audio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rodio = "0.15.0"
fundsp = "0.3.2"
macroquad = { version = "0.3.15", default-features = false }
parking_lot = "0.12.0"
cpal = "0.13.5"
fastrand = "1.7.0"
hashbrown = "0.12.0"