[package]
name = "audio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#macroquad = { version = "0.3.15", default-features = false }
parking_lot = "0.12.1"
cpal = "0.13.5"
hashbrown = "0.12.1"

# GUI/Graphics related stuff
pixels = "0.9.0"
egui = "0.17"
egui_wgpu_backend = "0.17"
egui-winit = { version = "0.17", default-features = false, features = ["links"] }
winit = "0.26"
winit_input_helper = "0.11"